--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1 class="text-6xl">hey</h1>
+  <h1 class="text-6xl">Stars bb</h1>
 </body>
 </html>
