--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="border-8 border-white lg:rotate-1" src="{{ home.header.image }}" alt="{{ global.title }}">
           </div>
           <div class="lg:w-2/5 w-full">
-            <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-12">{{ home.header.heading }}</h2>
+            <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-16 lg:pr-8">{{ home.header.heading }}</h2>
             <p class="mb-8">{{ home.header.description }}</p>
             <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-blue-900" href="{{ global.tickets.url }}">{{ global.tickets.name }}</a>
           </div>
