--- a/index.html
+++ b/index.html
@@ -1,184 +1,3 @@
-<html class="bg-blue-900">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Make a Wish presents Rising Stars</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body class="text-white font-sans">
-  <div class="fixed inset-0">
-    <canvas class="" id="canvas"></canvas>
-  </div>
-  <section class="relative z-10">
-    <header class="gradient-background">
-      <div class="max-w-6xl mx-auto lg:px-6 px-4">
-        <div class="lg:pt-12 pt-6 flex items-center">
-          <h1 class="text-2xl">{{ global.title }}</h1>
-          <div class="ml-auto flex items-center">
-            <nav class="lg:block hidden flex items-center">
-              {%- for item in global.navigation -%}
-                <a class="ml-8 border-b transition-1 border-transparent hover:border-white" href="{{ item.url }}">{{ item.name }}</a>
-              {%- endfor -%}
-            </nav>
-            <a class="block ml-8 py-2 px-4 transition-1 bg-blue-700 hover:bg-blue-800 rounded font-black" href="{{ global.tickets.url }}">{{ global.tickets.name }}</a>
-          </div>
-        </div>
-        <div class="flex flex-wrap flex-row-reverse items-center lg:py-24 pt-10 pb-12">
-          <div class="lg:w-3/5 w-full lg:pl-16 lg:mb-0 mb-10">
-            <img class="border-8 border-white lg:rotate-1" src="{{ home.header.image }}" alt="{{ global.title }}">
-          </div>
-          <div class="lg:w-2/5 w-full">
-            <h2 class="lg:text-5xl text-3xl leading-tight font-serif font-bold mb-6 lg:mr-16 lg:pr-8">{{ home.header.heading }}</h2>
-            <p class="mb-8">{{ home.header.description }}</p>
-            <a class="inline-block py-2 px-8 bg-yellow-700 transition-1 hover:bg-yellow-800 rounded font-black text-blue-900" href="{{ global.tickets.url }}">{{ global.tickets.name }}</a>
-          </div>
-        </div>
-      </div>
-      <svg class="w-full h-auto" width="1440" height="60" viewBox="0 0 1440 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M1440 60H0V15.7263C238.954 26.4889 509.166 -2.15255 835.5 0.130155C1071.65 1.782 1208.74 26.4265 1440 15.5859V60Z" fill="white"/>
-      </svg>
-    </header>
-    <section class="bg-white lg:py-24 py-12">
-      <div class="max-w-6xl mx-auto flex flex-wrap text-blue-900 text-center">
-        {%- for item in home.links -%}
-          <div class="lg:w-1/3 w-full lg:px-6 px-4 flex flex-col lg:mb-0 {% if forloop.index != forloop.length %}mb-16{% endif %}">
-            <img class="block lg:mb-12 mb-8" src="{{ item.icon }}" alt="{{ item.title }}">
-            <p class="text-2xl text-blue-900 font-bold font-serif mb-4">{{ item.title }}</p>
-            <p class="lg:mb-8 mb-6">{{ item.description }}</p>
-            <a class="mx-auto block font-black text-blue-700 mt-auto border-b-2 transition-1 border-transparent hover:border-blue-700" href="{{ item.url }}">{{ item.url_name }}</a>
-          </div>
-        {%- endfor -%}
-      </div>
-    </section>
-    <section class="hidden bg-gray-200 py-24">
-      <div class="max-w-6xl mx-auto lg:px-6 px-4 flex flex-wrap text-blue-900 text-center">
-      </div>
-    </section>
-    <footer class="gradient-background lg:text-base text-sm md:text-left text-center">
-      <svg class="w-full h-auto" width="1440" height="65" viewBox="0 0 1440 65" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M-5.68247e-06 0.000171665L1440 4.57764e-05L1440 45.1205C1375.91 42.1785 1304.85 44.0372 1246.17 50.6147L1178.62 58.1862C1097.56 67.2711 998.574 67.2711 917.518 58.1863L849.964 50.6147C768.908 41.5305 669.918 41.5305 588.865 50.6148L521.319 58.1863C440.263 67.2712 341.275 67.2712 260.219 58.1863L192.662 50.6148C133.358 43.9677 64.4556 42.1845 -1.72539e-06 45.2638L-5.68247e-06 0.000171665Z" fill="white"/>
-      </svg>
-      <div class="max-w-6xl mx-auto lg:px-6 px-4 flex flex-wrap items-center py-12">
-        <div class="flex items-center md:w-auto w-full flex justify-center md:mb-0 mb-8">
-          <a class="mr-6" href="{{ global.facebook }}">
-            <img src="images/facebook.svg" alt="{{ global.title }} on Facebook">
-          </a>
-          <a class="" href="{{ global.instagram }}">
-            <img src="images/instagram.svg" alt="{{ global.title }} on Instagram">
-          </a>
-        </div>
-        <div class="md:ml-auto md:w-auto w-full">
-          <a class="font-black border-b-2 transition-1 border-transparent hover:border-white" href="mailto:{{ global.email }}">{{ global.email }}</a>
-          <a class="ml-8 font-black border-b-2 transition-1 border-transparent hover:border-white" href="tel:{{ global.phone }}">{{ global.phone }}</a>
-        </div>
-      </div>
-    </footer>
-  </div>
-  <script>
-      "use strict";
-
-      var canvas = document.getElementById('canvas'),
-          ctx = canvas.getContext('2d'),
-          w = canvas.width = window.innerWidth,
-          h = canvas.height = window.innerHeight,
-
-          hue = 217,
-          stars = [],
-          count = 0,
-          maxStars = 1400;
-
-      // Thanks @jackrugile for the performance tip! https://codepen.io/jackrugile/pen/BjBGoM
-      // Cache gradient
-      var canvas2 = document.createElement('canvas'),
-          ctx2 = canvas2.getContext('2d');
-      canvas2.width = 100;
-      canvas2.height = 100;
-      var half = canvas2.width/2,
-          gradient2 = ctx2.createRadialGradient(half, half, 0, half, half, half);
-      gradient2.addColorStop(0.025, '#fff');
-      gradient2.addColorStop(0.1, 'hsl(' + hue + ', 61%, 33%)');
-      gradient2.addColorStop(0.25, 'hsl(' + hue + ', 64%, 6%)');
-      gradient2.addColorStop(1, 'transparent');
-
-      ctx2.fillStyle = gradient2;
-      ctx2.beginPath();
-      ctx2.arc(half, half, half, 0, Math.PI * 2);
-      ctx2.fill();
-
-      // End cache
-
-      function random(min, max) {
-          if (arguments.length < 2) {
-              max = min;
-              min = 0;
-          }
-
-          if (min > max) {
-              var hold = max;
-              max = min;
-              min = hold;
-          }
-
-          return Math.floor(Math.random() * (max - min + 1)) + min;
-      }
-
-      function maxOrbit(x,y) {
-          var max = Math.max(x,y),
-              diameter = Math.round(Math.sqrt(max*max + max*max));
-          return diameter/2;
-      }
-
-      var Star = function() {
-
-          this.orbitRadius = random(maxOrbit(w,h));
-          this.radius = random(60, this.orbitRadius) / 12;
-          this.orbitX = w / 2;
-          this.orbitY = h / 2;
-          this.timePassed = random(0, maxStars);
-          this.speed = random(this.orbitRadius) / 1000000;
-          this.alpha = random(2, 10) / 10;
-
-          count++;
-          stars[count] = this;
-      }
-
-      Star.prototype.draw = function() {
-          var x = Math.sin(this.timePassed) * this.orbitRadius + this.orbitX,
-              y = Math.cos(this.timePassed) * this.orbitRadius + this.orbitY,
-              twinkle = random(10);
-
-          if (twinkle === 1 && this.alpha > 0) {
-              this.alpha -= 0.05;
-          } else if (twinkle === 2 && this.alpha < 1) {
-              this.alpha += 0.05;
-          }
-
-          ctx.globalAlpha = this.alpha;
-          ctx.drawImage(canvas2, x - this.radius / 2, y - this.radius / 2, this.radius, this.radius);
-          this.timePassed += this.speed;
-      }
-
-      for (var i = 0; i < maxStars; i++) {
-          new Star();
-      }
-
-      function animation() {
-          ctx.globalCompositeOperation = 'source-over';
-          ctx.globalAlpha = 0.8;
-          ctx.fillStyle = 'hsla(' + hue + ', 64%, 6%, 1)';
-          ctx.fillRect(0, 0, w, h)
-
-          ctx.globalCompositeOperation = 'lighter';
-          for (var i = 1, l = stars.length; i < l; i++) {
-              stars[i].draw();
-          };
-
-          window.requestAnimationFrame(animation);
-      }
-
-      animation();
-  </script>
-</body>
-</html>
+---
+layout: layouts/home.njk
+---
